--- a/index.html
+++ b/index.html
@@ -14,82 +14,82 @@
         <div class="flex flex-col items-center justify-center w-[570px] border-2 border-black rounded-2xl h-4/6 bg-slate-500">
 
             <!-- Calculator Screen -->
-            <div class="w-[520px] h-32 m-10 rounded-lg screen bg-slate-400 flex justify-end items-center">
+            <div class="w-[520px] h-32 m-10 rounded-lg screen bg-slate-400 flex justify-end items-center border-2 border-[rgb(180,180,180,0.5)]">
                 <span class="mr-5 text-red-500">7 + 7</span>
             </div>
 
             <!-- Calculator Keys Container-->
-            <div class="grid grid-cols-4 grid-rows-4 gap-4 p-4 w-[520px] mb-10 rounded-lg key-container h-3/4 bg bg-slate-600">                
+            <div class="grid grid-cols-4 grid-rows-4 gap-4 p-4 w-[520px] mb-10 rounded-lg key-container h-3/4 bg border-2 bg-slate-600 border-[rgb(180,180,180,0.5)]">                
                 
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
-                             active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
-                             MC
-                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
-                             active:translate-y-[8px] transition ease-in-out duration[0.2s]  active:scale-90">
-                             M+
-                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              /
                 </div>
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
+                             active:translate-y-[8px] transition ease-in-out duration[0.2s]  active:scale-90">
+                             *
+                </div>
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
+                             active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
+                             Clear
+                </div>
                 <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
-                             X
+                             AC
                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              7
                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              8
                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              9
                            </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              -
                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              4
                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              5
                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              6
                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              +
                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              1
                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              2
                </div>
-                <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                              active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                              3
                </div>
-                <div class="flex items-center justify-center col-start-4 row-start-4 row-end-6 bg-red-500 border-2 border-black rounded-md cursor-pointer button
+                <div class="flex items-center justify-center col-start-4 row-start-4 row-end-6 bg-gray-300 border-2 border-black rounded-md cursor-pointer button
                             active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                             =
                </div>
-                <div class="flex items-center justify-center col-span-2 row-start-5 space-x-4 bg-red-500 border-2 border-black rounded-md cursor-pointer button h-14
+                <div class="flex items-center justify-center col-span-2 row-start-5 space-x-4 bg-gray-300 border-2 border-black rounded-md cursor-pointer button h-14
                             active:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                             0
                </div> 
-               <div class="flex items-center justify-center bg-red-500 border-2 border-black rounded-md button h-14 
+               <div class="flex items-center justify-center bg-gray-300 border-2 border-black rounded-md button h-14 
                             ctive:translate-y-[8px] transition ease-in-out duration[0.2s] active:scale-90">
                             .
                </div>
@@ -102,7 +102,7 @@
         <div class="absolute w-[570px] h-4/6 bg-slate-400 border-2 border-black rounded-2xl bottom-32 -z-[1]
                    before:absolute before:content-[''] before:w-2 before:h-8 before:bg-slate-100 before:bottom-0 before:left-[10%] 
                    after:absolute after:content-[''] after:w-2 after:h-8 after:bg-slate-100 after:bottom-0 after:left-[90%]">
-         </div>
+        </div>
         
 
     </div>
